--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -165,8 +165,8 @@
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
-	 <div class="w3-content" style="max-width:300px"> <img src="img/gemaltebilder.jpg" alt="gemaltebilder" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
-	 
+<iframe src="https://www.youtube.com/embed/iPTgVZwbWZU?si=6iZ9a0E412F1pF_F" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+	
 	 
 <!-- Details -->	
    <h3 class="w3-opacity w3-left-align">Mit Liebe zu Details...</h3>
@@ -271,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
