--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -207,7 +207,9 @@
 <p class="w3-justify"> Über das Kinderbuch wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann berichtet.</p>
 <p class="w3-justify"> Roland Züger hat es in <a href="https://www.wbw.ch/de/heft/archiv/122025-auf-zeit.html" target="_blank" rel="noopener">werk, bauen + wohnen 2025-12</a> empfohlen.</p>
 
-  
+<iframe src="https://www.youtube.com/embed/C4MB4AtRIE4?si=tfavQb8ybqw2Z8ZY" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+	
+	 
  </div>
  </div>
 	
@@ -271,6 +273,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
