--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -175,8 +175,10 @@
  <p class="w3-justify">Die Geschichte erforderte einen architektonischen Entwurf für die Aufstockung des sanierten Hauses. Auf Grundlage der Originalpläne des Vorbildhauses hat Meruert ein ein digitales 3D‑Modell erstellt, das den Gestaltungs‑ und Illustrationsprozess unterstützte. Konkretes Vorbild das von <a href="https://www.freisaarinen.ch/Projekte/pr_index.html" target="_blank" rel="noopener">Frei + Saarinen Architects</a> in Zürich entworfene Haus in der Agnesstrasse.
 	 </p>
 	 <div class="w3-content" style="max-width:300px"> <img src="img/filzhaus.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
-	 
- <p class="w3-justify">Das Kinderbuch kommt mit einem stolzen Preis, das wissen wir. Print-on-demand, nur auf Nachfrage gedruckt, ist teuer aber fühlte sich für uns besser an als auf einem anderen Kontinent zu drucken, während wir im Buch über Nachhaltigkeit predigen. Aber es lässt sich auch so sehen: Sie kaufen nicht nur ein Buch, sondern zugleich ein zukünftiges Geschenk für jemanden. Wir ermutigen unsere Leserinnen und Leser ausdrücklich im Impressum, das Buch weiterzugeben, sobald das Kind groß geworden ist. So wird die Botschaft weitergetragen. Wir haben uns für dicke Seiten entschieden, damit es dank der Qualität länger hält. Wir stehen hinter der Botschaft der Nachhaltigkeit – sowohl im Buch als auch mit dem Produkt selbst.
+
+	 <h3 class="w3-opacity w3-left-align">Einen Schönheitsfehler hat es...</h3>
+ <p class="w3-justify">Das Kinderbuch kommt mit einem stolzen Preis, das wissen wir. Print-on-demand, nur auf Nachfrage gedruckt, ist teuer aber fühlte sich für uns besser an als auf einem anderen Kontinent zu drucken, während wir im Buch über Nachhaltigkeit predigen. 
+	 Es lässt sich auch so sehen: Sie kaufen nicht nur ein Buch, sondern zugleich ein zukünftiges Geschenk für jemanden. Wir ermutigen unsere Leserinnen und Leser ausdrücklich im Impressum, das Buch weiterzugeben, sobald das Kind groß geworden ist. So wird die Botschaft weitergetragen. Wir haben uns für dicke Seiten entschieden, damit es dank der Qualität länger hält. Wir stehen hinter der Botschaft der Nachhaltigkeit – sowohl im Buch als auch mit dem Produkt selbst.
 
 
 <!-- Kinderbuch Lesung -->	
@@ -278,6 +280,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
