--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -200,6 +200,9 @@
 	<!-- Fördervermerk -->	 
 	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
 	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
+	
+	 <!-- Dank -->	 
+	 <h3 class="w3-opacity w3-left-align">Dank</h3>
 	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
 
 
@@ -280,6 +283,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
