--- a/angebote.html
+++ b/angebote.html
@@ -127,16 +127,16 @@
 		
 	<p class="w3-justify">März 2015</p>
 	<p class="w3-justify"><b>16th China International Real Estate & Architectural Technology Fair in Beijing</b>: Präsentation des Projektes "CubAge Quartier"</p>
-	
+
+		 <div class="w3-content" style="max-width:300px"> <img src="img/UN.jpg" alt="UN" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
+
+		
 	<p class="w3-justify">Februar 2014</p>
 	<p class="w3-justify"><b>United Nations New York Conference "Cities of Tomorrow", USA</b>: Präsentation des Projektes "CubAge Quartier"</p>
 
 	</div>
 
-	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
-    <img src="img/UN.jpg" alt="UN" style="width:50%">
-	
-</div>
+
 
 <!-- Kinderlesungen -->
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Kinderlesungen">
@@ -270,6 +270,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
