--- a/angebote.html
+++ b/angebote.html
@@ -97,21 +97,11 @@
 	<p class="w3-justify">07. November 2024</p>
 	<p class="w3-justify"><b>Online-Buchvorstellung "Mein NEUES altes Haus" mit Meruert Zharekesheva, moderiert von André Patrão</b></p>
 	<iframe src="https://www.youtube.com/embed/C4MB4AtRIE4?si=Ib9C_RPV70emtqGC" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
-	
-	<p class="w3-justify">14. April 2024</p>
-	<p class="w3-justify"><b>Evangelische Nikodemuskirche München</b>: "Marienlieder und die griechisch-orthodoxe Nachbargemeinde Allerheiligen"</p>
-
-	<p class="w3-justify">28. Januar 2024</p>
-	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b>: "Eine architektonische Umwandlung: Von der Röm.-kath. Allerseelenkirche 
-	zur Griechisch-Orthodoxen Allerheiligenkirche in München" vor 50 Personen.</p>
 
 	<p class="w3-justify">27. November 2023</p>
 	<p class="w3-justify"><b>Gr.-Orth. Allerheiligenkirche München</b>: "Die Gr.-Orth. Allerheiligenkirche in München. Ein Baupojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West" Offizielle Buchvorstellung mit 100 Gästen.</p>
 	<iframe src="https://www.youtube.com/embed/omDt9zQKYRY?si=NHQx9BkNQczDzJyb" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 		
-	<p class="w3-justify">24. November 2023</p>
-	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: "How did a research become a book within a year?" vor 15 Personen.</p>
-	
 	<p class="w3-justify">20. November 2023</p>
 	<p class="w3-justify"><b>Technische Universität München, Deutschland</b>: Gastvorlesung vor ca. 40 Personen</p>
 
@@ -154,7 +144,7 @@
 	Kontaktieren Sie mich gerne!</p>
 </div>
 		</div>
-		<div class="w3-theme-l1" id="buch"> <div class="w3-content" style="max-width:900px"> <figure class="w3-margin"> <blockquote class="w3-panel w3-round w3-padding-16 quote"> <p> "Die Kinder aus der kihz Tierspital haben es letzten Frühling im Rahmen des Vorlesetags sehr genossen, dir beim Erzählen der Geschichte zuzuhören. Es war so schön zu sehen, mit wie viel Aufmerksamkeit und Freude sie dabei waren! ✨" </p> </p> </blockquote> <figcaption class="quote-caption">— Stiftung Kihz, Jessica Wobmann</figcaption> </figure> </div> </div> <style> .quote { border:0; margin:1rem 0; padding:.5rem 0 .5rem 1.2rem; position:relative; } .quote::before { content:"„"; position:absolute; left:0; top:.2rem; font-size:2rem; line-height:1; opacity:.55; } .quote p { margin:0; font-size:1.05rem; line-height:1.6; } /* gut lesbare Quelle */ .quote-caption { margin-top:.4rem; font-size:.95rem; color:#1f2937; } /* dunkles Grau */ @media (prefers-color-scheme: dark){ .quote-caption { color:#e5e7eb; } .quote::before { opacity:.7; } } </style>
+		<div class="w3-theme-l1" id="buch"> <div class="w3-content" style="max-width:900px"> <figure class="w3-margin"> <blockquote class="w3-panel w3-round w3-padding-16 quote"> <p> "Die Kinder aus der kihz Tierspital haben es letzten Frühling im Rahmen des Vorlesetags sehr genossen, dir beim Erzählen der Geschichte zuzuhören. Es war so schön zu sehen, mit wie viel Aufmerksamkeit und Freude sie dabei waren! ✨" </p> </p> </blockquote> <figcaption class="quote-caption">— Stiftung Kihz, Jessica Wobmann</figcaption><br></figure> </div> </div> <style> .quote { border:0; margin:1rem 0; padding:.5rem 0 .5rem 1.2rem; position:relative; } .quote::before { content:"„"; position:absolute; left:0; top:.2rem; font-size:2rem; line-height:1; opacity:.55; } .quote p { margin:0; font-size:1.05rem; line-height:1.6; } /* gut lesbare Quelle */ .quote-caption { margin-top:.4rem; font-size:.95rem; color:#1f2937; } /* dunkles Grau */ @media (prefers-color-scheme: dark){ .quote-caption { color:#e5e7eb; } .quote::before { opacity:.7; } } </style>
 		
 
 
@@ -274,6 +264,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
