--- a/b_münchen.html
+++ b/b_münchen.html
@@ -161,6 +161,9 @@
 	<p class="w3-justify"> Am 22. November 2023 erschien ein Interview mit mir über das Buch in der <a href="https://www.griechenland.net/">Griechenlandzeitung</a>.
 	</p><br>
 
+<div class="w3-theme-l1" id="buch"> <div class="w3-content" style="max-width:800px"> <figure class="w3-margin"> <blockquote class="w3-panel w3-round w3-padding-16 quote"> <p> "Unser besonderer Dank gilt Frau Dr. Korinna Weber für ihre hervorragende Arbeit, die ein wunderbares Geschenk an die Metropolie von Deutschland, an unsere Gemeinde in München und an die Geschichte der Stadt München ist." </p> </p> </blockquote> <figcaption class="quote-caption">— Erzpriester Apostolos Malamoussis</figcaption><br></figure> </div> </div> <style> .quote { border:0; margin:1rem 0; padding:.5rem 0 .5rem 1.2rem; position:relative; } .quote::before { content:"„"; position:absolute; left:0; top:.2rem; font-size:2rem; line-height:1; opacity:.55; } .quote p { margin:0; font-size:1.05rem; line-height:1.6; } /* gut lesbare Quelle */ .quote-caption { margin-top:.4rem; font-size:.95rem; color:#1f2937; } /* dunkles Grau */ @media (prefers-color-scheme: dark){ .quote-caption { color:#e5e7eb; } .quote::before { opacity:.7; } } </style>
+		
+	 
  <!-- Details Titel 2 -->	
  <h3 class="w3-opacity w3-left-align">Stimmen zum Buch</h3>
 	<p class="w3-justify"><i>"(...) Es wird weitere solcher Arbeiten bedürfen um DenkmalpflegerInnen, die noch in der Regel aus eher anderen Hintergründen kommen, für die ein gr.-orth. Raum wahrscheinlich erstmal eher mit fremden Momenten aufwartet eine Brücke zu schlagen auch das in ein Instrumentarium zu bekommen damit umzugehen, genauso wie wir dann solche Arbeiten für andere religiöse Gemeinschaften mit unterschiedlichen kulturellen und landesbezogenen Hintergründen brauchen werden. Insofern, kann ich sehr empfehlen bei Josef Fink Verlag erschienen, wie gewohnt sehr bibliophil ‚Die Gr.-Orth. Allerheiligenkirche in München‘ von Korinna Weber und in einem sehr schönen Vorwort von Andreas Putz." Karin Berkemann aus dem Podcast ModerneRegional</i>
@@ -250,5 +253,6 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
