--- a/b_münchen.html
+++ b/b_münchen.html
@@ -147,10 +147,11 @@
 </p><br>
 
  <!-- Details Titel 1 -->	
- <h3 class="w3-opacity w3-left-align">Video zum Buch</h3>
+ <h3 class="w3-opacity w3-left-align">Digitales Durchblättern</h3>
 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	
+
+	 <h3 class="w3-opacity w3-left-align">Wie kam es zu diesem Sakralbau Exkurs?</h3>
 	<p class="w3-justify"> Anfang Oktober 2023 ist mein Buch «Die Griechisch-Orthodoxe Allerheiligenkirche in München» beim <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erschienen.</p>
 	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau: Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. Bereichert wird das Buch durch Vorwörter von Metropolit Augustinos von Deutschland, Kardinal Friedrich Wetter und Prof. Andreas Putz von der TU München und bisher nicht publiziertem Archivmaterial zu beiden Kirchen.</p>
 	<p class="w3-justify"> Von der ersten Zeile im Manuskript bis zum fertigen Buch sind 14 Monate vergangen. Das Endprodukt entstand in engem Dialog mit dem Verlag, meinem graphischen Berater Andreas Thuy und wurde mit viel Aufmerksamkeit von Rudolf Winterstein lektoriert. Die Druckkosten wurden zum Teil von der <a href="https://www.boehringer-geisteswissenschaften.de/">Geschwister Boehringer Ingelheim Stiftung</a> mitfinanziert. Das Buch wurde erstmalig als Workshop im <a href="https://www.zikg.eu/aktuelles/veranstaltungen/2023/workshop-korinna-zinovia-weber">Zentralinstitut für Kunstgeschichte</a> am 25. Oktober 2023 vorgestellt. Die offizielle Buchvorstellung fand am 27. November 2023 in München vor 100 geladenen Gästen statt. </p>
@@ -160,10 +161,10 @@
 	
 	<p class="w3-justify"> Am 22. November 2023 erschien ein Interview mit mir über das Buch in der <a href="https://www.griechenland.net/">Griechenlandzeitung</a>.
 	</p><br>
-
+ </div>
 <div class="w3-theme-l1" id="buch"> <div class="w3-content" style="max-width:800px"> <figure class="w3-margin"> <blockquote class="w3-panel w3-round w3-padding-16 quote"> <p> "Unser besonderer Dank gilt Frau Dr. Korinna Weber für ihre hervorragende Arbeit, die ein wunderbares Geschenk an die Metropolie von Deutschland, an unsere Gemeinde in München und an die Geschichte der Stadt München ist." </p> </p> </blockquote> <figcaption class="quote-caption">— Erzpriester Apostolos Malamoussis</figcaption><br></figure> </div> </div> <style> .quote { border:0; margin:1rem 0; padding:.5rem 0 .5rem 1.2rem; position:relative; } .quote::before { content:"„"; position:absolute; left:0; top:.2rem; font-size:2rem; line-height:1; opacity:.55; } .quote p { margin:0; font-size:1.05rem; line-height:1.6; } /* gut lesbare Quelle */ .quote-caption { margin-top:.4rem; font-size:.95rem; color:#1f2937; } /* dunkles Grau */ @media (prefers-color-scheme: dark){ .quote-caption { color:#e5e7eb; } .quote::before { opacity:.7; } } </style>
 		
-	 
+<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Stimmen">
  <!-- Details Titel 2 -->	
  <h3 class="w3-opacity w3-left-align">Stimmen zum Buch</h3>
 	<p class="w3-justify"><i>"(...) Es wird weitere solcher Arbeiten bedürfen um DenkmalpflegerInnen, die noch in der Regel aus eher anderen Hintergründen kommen, für die ein gr.-orth. Raum wahrscheinlich erstmal eher mit fremden Momenten aufwartet eine Brücke zu schlagen auch das in ein Instrumentarium zu bekommen damit umzugehen, genauso wie wir dann solche Arbeiten für andere religiöse Gemeinschaften mit unterschiedlichen kulturellen und landesbezogenen Hintergründen brauchen werden. Insofern, kann ich sehr empfehlen bei Josef Fink Verlag erschienen, wie gewohnt sehr bibliophil ‚Die Gr.-Orth. Allerheiligenkirche in München‘ von Korinna Weber und in einem sehr schönen Vorwort von Andreas Putz." Karin Berkemann aus dem Podcast ModerneRegional</i>
@@ -253,6 +254,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
