--- a/b_münchen.html
+++ b/b_münchen.html
@@ -144,7 +144,9 @@
  <!-- Buchbeschrieb -->	
 	<p class="w3-justify">Die zwischen 1993 und 1995 errichtete Griechisch-Orthodoxe Allerheiligenkirche an der Ungererstraße in München hat für ihre Gemeinde, die Stadt und die Ökumene eine besondere Bedeutung. Ihre Vorgeschichte beginnt bereits Anfang der 1980er Jahre – damals wurde der Griechisch-Orthodoxen Gemeinde die an gleicher Stelle befindliche, 1929 nach Plänen von Richard Steidle erbaute katholische Allerseelenkirche von der Erzdiözese München und Freising zur Nutzung zur Verfügung gestellt. In die heutige Kirche, entworfen und gebaut von Robert Brannekämper sen., wurden Teile der Bestandsmauern integriert und zugleich traditionelle Bauelemente orthodoxer Kirchen mit zeitgenössischem Aussehen verbunden.
 	Dieses Buch dokumentiert erstmals die umfangreiche Baugeschichte beider Kirchen mit bisher unpubliziertem Archivmaterial und trägt damit als proaktive Denkmalpflege zur langfristigen Erhaltung und historischen Einordnung des heutigen Bauwerks bei.
-</p><br>
+</p>
+	 <p class="w3-justify">Bereichert wird das Buch durch Geleitwörter von Metropolit Augustinos von Deutschland und Kardinal Friedrich Wetter. Das Vorwort hat Prof. Andreas Putz von der TU München verfasst.</p>
+	 <br>
 
  <!-- Details Titel 1 -->	
  <h3 class="w3-opacity w3-left-align">Digitales Durchblättern</h3>
@@ -152,8 +154,9 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 	 <h3 class="w3-opacity w3-left-align">Wie kam es zu diesem Sakralbau Exkurs?</h3>
-	<p class="w3-justify"> Anfang Oktober 2023 ist mein Buch «Die Griechisch-Orthodoxe Allerheiligenkirche in München» beim <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erschienen.</p>
-	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau: Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. Bereichert wird das Buch durch Vorwörter von Metropolit Augustinos von Deutschland, Kardinal Friedrich Wetter und Prof. Andreas Putz von der TU München und bisher nicht publiziertem Archivmaterial zu beiden Kirchen.</p>
+	<p class="w3-justify">Aufgewachsen in einer Deutsch-Griechischen Familie in München bin ich in dieser gr.-orth. Gemeinde groß geworden. 2019 hatte ich die Anfrage von Erzpriester Apostolos Malamoussis erhalten, ob ich nicht als promovierte Architektin eine kurze Baugeschichte der Gr.-Orth. Allerheiligenkirche aufschreiben könne für ein anstehendes Jubiläum. Aufgrund der Pandemie kam es zu der Umsetzung dieses Vorhabens vorerst nicht.</p>
+	<p class="w3-justify">Als ich mich für den Theodor-Fischer-Preis 2022 am Zentralinstitut für Kunstgeschichte beworben habe, habe ich mir gesagt: Wenn ich den Preis bekommen sollte, dann widme ich das damit verbundene Forschungsstipendium der Baugeschichte dieser Kirche und das obwohl ich keine Expertin für Sakralbau war, sondern eher für Massenwohnungsbau der Nachkriegszeit. Aus den acht Wochen forschen sind ein paar Monate mehr geworden, weil mich diese Geschichte dieses Bauwerks, nicht mehr losgelassen hat.</p>
+	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau: Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. </p>
 	<p class="w3-justify"> Von der ersten Zeile im Manuskript bis zum fertigen Buch sind 14 Monate vergangen. Das Endprodukt entstand in engem Dialog mit dem Verlag, meinem graphischen Berater Andreas Thuy und wurde mit viel Aufmerksamkeit von Rudolf Winterstein lektoriert. Die Druckkosten wurden zum Teil von der <a href="https://www.boehringer-geisteswissenschaften.de/">Geschwister Boehringer Ingelheim Stiftung</a> mitfinanziert. Das Buch wurde erstmalig als Workshop im <a href="https://www.zikg.eu/aktuelles/veranstaltungen/2023/workshop-korinna-zinovia-weber">Zentralinstitut für Kunstgeschichte</a> am 25. Oktober 2023 vorgestellt. Die offizielle Buchvorstellung fand am 27. November 2023 in München vor 100 geladenen Gästen statt. </p>
 
 	<p class="w3-justify"> Am 17. November 2023 führte Karin Berkemann von <a href="https://www.moderne-regional.de/kleinkirchen-pilgern-korinna-weber-allerheiligenkirche-muenchen/">moderneRegional</a>	ein Gespräch mit mir zu meiner Forschung.
@@ -254,6 +257,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
