--- a/b_münchen.html
+++ b/b_münchen.html
@@ -154,9 +154,11 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 	 <h3 class="w3-opacity w3-left-align">Wie kam es zu diesem Sakralbau Exkurs?</h3>
-	<p class="w3-justify">Aufgewachsen in einer Deutsch-Griechischen Familie in München bin ich in dieser gr.-orth. Gemeinde groß geworden. 2019 hatte ich die Anfrage von Erzpriester Apostolos Malamoussis erhalten, ob ich nicht als promovierte Architektin eine kurze Baugeschichte der Gr.-Orth. Allerheiligenkirche aufschreiben könne für ein anstehendes Jubiläum. Aufgrund der Pandemie kam es zu der Umsetzung dieses Vorhabens vorerst nicht.</p>
-	<p class="w3-justify">Als ich mich für den Theodor-Fischer-Preis 2022 am Zentralinstitut für Kunstgeschichte beworben habe, habe ich mir gesagt: Wenn ich den Preis bekommen sollte, dann widme ich das damit verbundene Forschungsstipendium der Baugeschichte dieser Kirche und das obwohl ich keine Expertin für Sakralbau war, sondern eher für Massenwohnungsbau der Nachkriegszeit. Aus den acht Wochen forschen sind ein paar Monate mehr geworden, weil mich diese Geschichte dieses Bauwerks, nicht mehr losgelassen hat.</p>
-	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau: Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. </p>
+	<p class="w3-justify">Aufgewachsen in einer Deutsch-Griechischen Familie in München bin ich in dieser gr.-orth. Gemeinde groß geworden. 2019 hatte ich die Anfrage von Erzpriester Apostolos Malamoussis erhalten, ob ich nicht eine kurze Baugeschichte der Gr.-Orth. Allerheiligenkirche aufschreiben könne für ein anstehendes Jubiläum. Aufgrund der Pandemie kam es zu der Umsetzung dieses Vorhabens vorerst nicht.</p>
+	<p class="w3-justify">Als ich mich für den Theodor-Fischer-Preis 2022 am Zentralinstitut für Kunstgeschichte bewarb, habe ich mir gesagt: Wenn ich den Preis bekommen sollte, dann widme ich das damit verbundene Forschungsstipendium der Baugeschichte dieser Kirche und das obwohl ich keine Expertin für Sakralbau war, sondern eher für Massenwohnungsbau der Nachkriegszeit. Aus den acht Wochen forschen sind ein paar Monate mehr geworden, weil mich diese Geschichte dieses Bauwerks, nicht mehr losgelassen hat.</p>
+
+	  <h3 class="w3-opacity w3-left-align">Aus eigener Initiative</h3>
+	 <p class="w3-justify">Mein Buch soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. Irgendwann werden die Zeitzeugen nicht mehr hier sein, um uns die Geschichte zu erzählen. Das Buch überliefert die Geschichte an die kommenden Generationen.</p>
 	<p class="w3-justify"> Von der ersten Zeile im Manuskript bis zum fertigen Buch sind 14 Monate vergangen. Das Endprodukt entstand in engem Dialog mit dem Verlag, meinem graphischen Berater Andreas Thuy und wurde mit viel Aufmerksamkeit von Rudolf Winterstein lektoriert. Die Druckkosten wurden zum Teil von der <a href="https://www.boehringer-geisteswissenschaften.de/">Geschwister Boehringer Ingelheim Stiftung</a> mitfinanziert. Das Buch wurde erstmalig als Workshop im <a href="https://www.zikg.eu/aktuelles/veranstaltungen/2023/workshop-korinna-zinovia-weber">Zentralinstitut für Kunstgeschichte</a> am 25. Oktober 2023 vorgestellt. Die offizielle Buchvorstellung fand am 27. November 2023 in München vor 100 geladenen Gästen statt. </p>
 
 	<p class="w3-justify"> Am 17. November 2023 führte Karin Berkemann von <a href="https://www.moderne-regional.de/kleinkirchen-pilgern-korinna-weber-allerheiligenkirche-muenchen/">moderneRegional</a>	ein Gespräch mit mir zu meiner Forschung.
@@ -257,6 +259,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
