--- a/b_münchen.html
+++ b/b_münchen.html
@@ -113,7 +113,7 @@
 
 
 <!-- Banner -->
-	<img src="img/buechertisch.jpg" alt="Strati" style="width:100%">
+	<img src="img/pantes2.jpg" alt="pantes" style="width:100%">
 
 <!-- Page content -->
 <div class="w3-container w3-content w3-padding-24" style="max-width:800px" id="start">
@@ -259,6 +259,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
