--- a/b_million.html
+++ b/b_million.html
@@ -161,10 +161,11 @@ Après avoir soutenu ma thèse avec succès en 2019, Tom Avermaete — qui a ég
 
 Un livre a déclenché cette recherche: Bâtir la vie, de Georges Candilis. Au bout de cette aventure (je n’aime pas parler de “fin”: une recherche n’est jamais vraiment terminée), un autre livre a vu le jour: le mien, Grands ensembles en héritage, à paraître aux Éditions de la Villette en 2025. Peut-être inspirera-t-il, lui aussi, quelqu’un à regarder le monde autrement?
 </p>
-
+	</div>
 <div class="w3-theme-l1" id="buch"> <div class="w3-content" style="max-width:800px"> <figure class="w3-margin"> <blockquote class="w3-panel w3-round w3-padding-16 quote"> <p> "Une très belle découverte de l'un des projets d'envergure de l'agence Candilis-Josic-Woods ! On aborde aussi la question du patrimoine récent, celui 20è siècle, constitué de grands ensembles dévalorisés par les politiques et la population française. Cependant ces stigmates représentent aussi le traitement réservé à la population qui y habite, souvent immigrée et exclue. Les projets de réhabilitation de ces bâtiments imposent souvent de la démolition mais sans écouter les habitant·es du quartier.
 	Ce livre est inspirant car il cherche à la fois une solution pour la reconnaissnace architecturale, la préservation du bâti et le dialogue social avec les grands ensembles." </p> </p> </blockquote> <figcaption class="quote-caption">— CamilleWD, Book Node</figcaption><br></figure> </div> </div> <style> .quote { border:0; margin:1rem 0; padding:.5rem 0 .5rem 1.2rem; position:relative; } .quote::before { content:"„"; position:absolute; left:0; top:.2rem; font-size:2rem; line-height:1; opacity:.55; } .quote p { margin:0; font-size:1.05rem; line-height:1.6; } /* gut lesbare Quelle */ .quote-caption { margin-top:.4rem; font-size:.95rem; color:#1f2937; } /* dunkles Grau */ @media (prefers-color-scheme: dark){ .quote-caption { color:#e5e7eb; } .quote::before { opacity:.7; } } </style>
-		
+
+	 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
 	 
 	 <!-- Details Titel 1 -->	
  <h3 class="w3-opacity w3-left-align">Vestiges et Vivants: un film, un livre</h3>
@@ -265,6 +266,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
