--- a/b_million.html
+++ b/b_million.html
@@ -185,6 +185,8 @@ habitants. L’habitat n’est pas qu’un agencement de murs mais aussi de viva
 réalité que la politique oublie bien souvent.
 </p>
 
+<iframe src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+		 
 	<p class="w3-opacity w3-left-align"><i>Extraits du livre d'or</i></p> 
 	 <p class="w3-justify"><i>"Superbe soirée. Le film d'entretiens des habitants au moment de la démolition de la cité Montillet (une des cités du Million, construites par l'équipe de Candilis) est passionnant et montre bien la diversité des habitants et de la complexité de leurs sentiments face à cettee démolition. On a, peut-être, pas assez parlé du projet de l'équipe Candilis, Josic et Woods pour ce concours du million (un appartement T3 pour moins d'1 million de francs de 1954) et de ses limites. Mais il y a aussi le livre de Korinna Weber." Jean-Marc Chanteux </i></p>
 	<br>
@@ -266,6 +268,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
