--- a/index.html
+++ b/index.html
@@ -107,29 +107,14 @@
         	<p class="w3-opacity">Korinna Zinovia Weber, Meruert Zharekesheva</p>
         	<p>Dieses Buch erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen näher gebracht.</p>
 			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/">Jetzt bestellen! </button>
-        	<button class="w3-button w3-blue-grey w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/meinneuesalteshaus.html">Mehr Informationen</button></a>
+        	<button class="w3-button w3-blue w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="angebote.html#Kinderlesungen">Besuch vom Filzhaus!</button></a>
 			</div>
+			<a href="b_alteshaus.html">
+			<img src="img/lesung.jpg" alt="San Francisco" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 	
-	<!-- Vierte Säule -->
 
-	<!-- Fünfte Säule -->
-	
-	<!-- Sechste Säule -->
-    <div class="w3-third w3-margin-bottom">
-		<div class="w3-white w3-card" style="padding:0">
-			<a href="b_münchen.html">
-			<img src="img/kirche_gif.gif" alt="Langensteinen" style="width:100%; height:auto; display:block;" class="w3-hover-opacity"></a>
-			<div style="padding:16px;">
-			<p class="w3-opacity">#Buch #Deutsch</p>
-        	<p><b>Die Griechisch-Orthodoxe Allerheiligenkirche in München – Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West</b></p>
-        	<p class="w3-opacity">Korinna Zinovia Weber</p>
-        	<p>Dieses Buch dokumentiert erstmals die umfangreiche (Um-)Baugeschichte mit bisher unpubliziertem Archivmaterial und trägt damit zur langfristigen Erhaltung und historischen Einordnung des heutigen Bauwerks bei.</p>
-        	<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Jetzt bestellen! </button>
-			</div>
-		</div>
-	</div>
 	
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="./buecher.html"><button class="w3-button w3-khaki">Mehr über Projekte</button></a>
@@ -223,6 +208,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
