--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         	<button class="w3-button w3-blue w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="angebote.html#Kinderlesungen">Besuch vom Filzhaus!</button></a>
 			</div>
 			<a href="b_alteshaus.html">
-			<img src="img/lesung.jpg" alt="San Francisco" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
+			<img src="img/lesung.JPG" alt="San Francisco" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 	
@@ -208,6 +208,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
