--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         	<p>Der kleine Architektur- und Kunstführer über das Chilematt in Steinhausen vermittelt einen kompakten Einblick und neuen Zugang zum Verständnis des Baus von Ernst Gisel.</p>
 			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/titel/steinhausen-ch-kirchen-und-begegnungszentrum-chilematt/">Jetzt bestellen! </button>
 			</div>
+			<a href="b_steinhausen.html">
+			<img src="img/steinhausen1.JPG" alt="Steinhausen" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 
@@ -103,7 +105,7 @@
 			<img src="img/cover-deutsch.jpg" alt="San Francisco" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
 			<div style="padding:16px;">  
         	<p><b>"Mein NEUES altes Haus - eine Geschichte für Kinder über Umbau statt Neubau"</b></p>
-			<p class="w3-opacity">#Buch #Deutsch #French #English #Greek #Hungarian #Dutch #Italian</p>
+			<p class="w3-opacity">#Buch #Kinderlesung #Deutsch #French #English #Greek #Hungarian #Dutch #Italian #Filzhaus</p>
         	<p class="w3-opacity">Korinna Zinovia Weber, Meruert Zharekesheva</p>
         	<p>Dieses Buch erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen näher gebracht.</p>
 			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/">Jetzt bestellen! </button>
@@ -208,6 +210,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
