--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/titel/steinhausen-ch-kirchen-und-begegnungszentrum-chilematt/">Jetzt bestellen! </button>
 			</div>
 			<a href="b_steinhausen.html">
-			<img src="img/steinhausen1.JPG" alt="Steinhausen" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
+			<img src="img/steinhausen1.jpg" alt="Steinhausen" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 
@@ -210,6 +210,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
