--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 </div>
 
 		
-<!-- Lesungen -->
+<!-- Angebote -->
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vort">
     <h3 class="w3-left-align">Vorträge, Lesungen und Beratungsangebote</h3>
-	<p class="w3-justify">Sie wollen mehr über die Geschichte eines Gebäudes erfahren oder das Gebäude (Kirche, Firmensitz, Wohnhaus...) einem breiteren Publikum vorstellen?</p>
-	  <p class="w3-justify">Das blaue Filzhaus soll seine Geschichte den Kindern erzählen?</p>
+	<p class="w3-justify">Sie wollen mehr über die Geschichte eines Gebäudes erfahren oder ein Bauwerk einem breiteren Publikum vorstellen?</p>
+	  <p class="w3-justify">Das blaue Filzhaus soll kommen, um seine Geschichte den Kindern zu erzählen?</p>
 	<p class="w3-justify">Sie wollen eine Publikation verfassen oder gestalten?</p>
 	<p class="w3-justify">Sie wissen nicht wohin mit alten Kisten voller Pläne, Schriftverkehr und Fotos eines Architekturbüros?</p>
-	    <p class="w3-justify">Haben Sie Interesse Ihre Veranstaltung mit einem unterhaltenden Vortrag über Architektur zu bereichern? Dann melden Sie sich gerne bei mir.</p>
+	    <p class="w3-justify">Sie möchten Ihre Veranstaltung mit einem unterhaltenden Vortrag über Architektur zu bereichern?</p>
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="angebote.html"><button class="w3-button w3-blue-grey">Mehr über Angebote</button></a>
 	</div>
@@ -146,9 +146,9 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="port">
     <h3 class="w3-left-align">Portrait</h3>
 	<p class="w3-justify">
-	Ich bin als Wissenschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Als Expertin für Architektur des 20. Jahrhunderts setze ich mich für proaktive Denkmalpflege und die Vermittlung von Architektur ein. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
+	Ich bin als Wissenschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin und Architekturvermittlerin tätig. Als Expertin für Architektur des 20. Jahrhunderts setze ich mich für proaktive Denkmalpflege und die Vermittlung von Architektur ein. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
 	</p>
-	<p class="w3-opacity w3-justify">Je suis chercheuse dans le domaine de l’architecture et de la conservation du patrimoine bâti, ainsi qu’autrice indépendante. Spécialiste de l’architecture du XXe siècle, je plaide pour une conservation proactive du patrimoine et pour la médiation de l’architecture. La recherche sur l’architecture et la conduite de projets jusqu’à leur aboutissement me passionnent. Je m’engage volontiers pour la reconnaissance d’édifices qui ne sont pas immédiatement valorisés dans notre société.</p><br>
+	<p class="w3-opacity w3-justify"><i>Je suis chercheuse dans le domaine de l’architecture et de la conservation du patrimoine bâti, ainsi qu’autrice indépendante. Spécialiste de l’architecture du XXe siècle, je plaide pour une conservation proactive du patrimoine et pour la médiation de l’architecture. La recherche sur l’architecture et la conduite de projets jusqu’à leur aboutissement me passionnent. Je m’engage volontiers pour la reconnaissance d’édifices qui ne sont pas immédiatement valorisés dans notre société.</i></p><br>
 
 	<img src="img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px; margin:auto;">
 </div>
@@ -206,6 +206,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
