--- a/buecher.html
+++ b/buecher.html
@@ -75,10 +75,10 @@
 
 <!-- Bücher und Artikel -->
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
-    <h3 class="w3-left-align">Autorin und Herausgeberin</h3>
-		
-	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur mache ich langfristig und niederschwellig zugänglich. Bücher sind dabei nicht Endpunkt, sondern Teil eines Prozesses. Sie entstehen aus fundierter Recherche und werden von zielgruppenspezifischer Vermittlung begleitet. Jede Publikation ist eingebettet in ein größeres Vorhaben, das Wissen bündelt, erprobt und in die Öffentlichkeit trägt.</p>
+    
+	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur mache ich langfristig und niederschwellig zugänglich. Bücher sind dabei nicht Endpunkt, sondern Teil eines Prozesses in einem Projekt. Sie entstehen aus fundierter Recherche und werden von zielgruppenspezifischer Vermittlung begleitet.</p>
 	
+	<h3 class="w3-left-align">Autorin und Herausgeberin</h3>
 <!-- Panels -->	
 	<div class="w3-row-padding">
 
@@ -281,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
