--- a/angebote.html
+++ b/angebote.html
@@ -67,7 +67,7 @@
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Button">
 	<div class="button-container">
 		<a href="#vorträge"><button class="w3-button w3-blue-grey">Vorträge</button></a>
-		<a href="#Kinderlesungen"><button class="w3-button w3-blue-grey">Kinderlesungen</button></a>
+		<a href="#Kinderlesungen"><button class="w3-button w3-blue">Besuch vom Filzhaus!</button></a>
 		<a href="#publikation"><button class="w3-button w3-blue-grey">Publikationsberatung</button></a>
 		<a href="#historische"><button class="w3-button w3-blue-grey">Historische Forschung</button></a>
 		<a href="#nachlass"><button class="w3-button w3-blue-grey">Nachlass & Provinienz</button></a>
@@ -137,9 +137,9 @@
   	</div>
 
 </div>
-    <h3 class="w3-left-align">Lesungen für Kinder</h3>
-	<p class="w3-justify">Aus meinem Kinderbuch "Mein NEUES altes Haus" habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf.</p>
-    <p class="w3-justify">Das blaue Filzhaus war schon hier zu Besuch: Schule Freilager Vorlesenacht (Zürich), Freilager Kindergarten (Zürich), Nikodemäuse Kindergarten (München), Tierspital Kita der Stiftung Kihz (Zürich), dem Architekturzentrum Zürich, dem ZAZ Bellerive (Zürich) und im GZ Bäckeranlage (Zürich), Runstner Hof (Gargazon, IT). Das Feedback des jungen Publikums war überwältigend positiv begeistert. Dauer: 45-60min.</p>
+    <h3 class="w3-left-align">Besuch vom Filzhaus - Für Kinder ab 4 Jahren</h3>
+	<p class="w3-justify">Aus meinem Kinderbuch "Mein NEUES altes Haus" habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Das junge Publikum war immer überwältigend begeistert. Dauer: 45-60min.</p>
+    <p class="w3-justify">Das blaue Filzhaus war schon hier zu Besuch: Schule Freilager Vorlesenacht (Zürich), Freilager Kindergarten (Zürich, CE), Nikodemäuse Kindergarten (München, DE), Vorlesetag am Tierspital Kita der Stiftung Kihz (Zürich, CH), Architekturzentrum Zürich, ZAZ Bellerive (Zürich, CH) GZ Bäckeranlage (Zürich, CH), Runstner Hof (Gargazon, IT). </p>
     <p class="w3-justify">Darf ich einmal für Sie/Ihre Klasse/Ihre Gruppe/Ihr Fest lesen kommen?
 	Kontaktieren Sie mich gerne!</p>
 </div>
@@ -264,6 +264,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
